--- a/how-to-project/public/index.css
+++ b/how-to-project/public/index.css
@@ -1043,6 +1043,12 @@ height: 182px;
   align-items: center;
   padding: 0px;
 }
+.MuiCardMedia-img{
+  max-width: 100%;
+  /*   transform-origin: center; */
+    transform: scale(var(--img-scale));
+    transition: transform 0.4s ease-in-out;
+}
 .Admin-section{
   margin:30px 90px
 }
